Revert "cleaned build gradle"
This reverts commit 84eca3fb603815f3a128e7a5ece9d4b599c8e7dd.