@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
     }
@@ -35,6 +36,23 @@ subprojects {
     tasks.withType(JavaCompile) {
         options.compilerArgs << "-Xlint:unchecked"
     }
+
+	test {
+		// required by jmockit
+		jvmArgs += '-Djdk.attach.allowAttachSelf'
+
+		testLogging {
+			events "passed", "skipped", "failed"
+
+			afterSuite { desc, result ->
+				if (!desc.parent) {
+					println "Tests run: ${result.testCount}, " +
+						"Failures: ${result.failedTestCount}, " +
+						"Skipped: ${result.skippedTestCount}"
+				}
+			}
+		}
+	}
 
     // integration test
     def testSrcDir = file('src/integrationtest/java')
